[package]
name = "async_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
rustls-pemfile = "1.0.2"
tokio-rustls = "0.24.0"
tokio-util = "0.7.8"
webpki-roots = "0.22.6"
rustls-webpki = "0.100.1"
bytes = "1.4.0"
log = "0.4.17"
simplelog = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
argh = "0.1"

[dev-dependencies]
rand = "0.8.5"
openssl = "0.10.45"
async_socket = { path = "."}